--- a/templates/Sign-Up.html
+++ b/templates/Sign-Up.html
@@ -35,29 +35,32 @@
           </li>
         </ul>
       </div>
-  </nav>
-  <br><br><br><br><br> -->
+  </nav> -->
   <br>
   <div class="card-img-top img-fluid text-center mx-auto" width = "20" height = "20">
     <a href="securesites.html" class="navbar-brand">
       <img class = "img-fluid mx-auto" src = "img/securesitemini.jpeg">
     </a>
 </div>
-  <br>
+  <br><br>
   <div class="card text-center col-lg-4 mx-auto">
                 <div class="card-body">
                     <h4 class="card-title">Welcome Back To
                       <br> Internet Security</h4>
                     <br>
                     <form action="/login" method="post">
+                      <label for="name">Name: </label><br>
+                      <input type="text" name="nameID"></input>
+                      <br>
                       <label for="email">Email: </label><br>
                       <input type="text" name="emailID"></input>
-                      <br>
                       <br>
                       <label for="masterkey">Master Key: </label><br>
                       <input type="password" name="masterkeyID"></input>
                       <br>
-                      <br>
+                      <label for="confirmmasterkey">Confirm Master Key: </label><br>
+                      <input type="password" name="confirmmasterkeyID"></input>
+                      <br><br>
                     <input class="btn btn-outline-primary" name="Login" type="submit" value="Login"/></input>
                   </form>
                   <br>
