--- a/templates/password.html
+++ b/templates/password.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 </head>
-<body><!--
+<body>
   <nav class="navbar navbar-expand-sm navbar-light fixed-top py-40 bg-primary" id="main-nav">
     <div class="container">
       <a href="securesites.html" class="navbar-brand">
@@ -30,41 +30,45 @@
           <li class="nav-item">
             <a href="Sign-Up.html" class="nav-link"> Sign Up</a>
           </li>
-          <li class="nav-item">
-            <a href="password-display.html" class="nav-link"> Password Display</a>
-          </li>
+        </li>
+        <li class="nav-item">
+          <a href="password-display.html" class="nav-link"> Password Display</a>
+        </li>
         </ul>
       </div>
   </nav>
-  <br><br><br><br><br> -->
-  <br>
-  <div class="card-img-top img-fluid text-center mx-auto" width = "20" height = "20">
-    <a href="securesites.html" class="navbar-brand">
-      <img class = "img-fluid mx-auto" src = "img/securesitemini.jpeg">
-    </a>
-</div>
-  <br>
+  <br><br><br><br><br>
   <div class="card text-center col-lg-4 mx-auto">
-                <div class="card-body">
-                    <h4 class="card-title">Welcome Back To
-                      <br> Internet Security</h4>
-                    <br>
-                    <form action="/login" method="post">
-                      <label for="email">Email: </label><br>
-                      <input type="text" name="emailID"></input>
-                      <br>
-                      <br>
-                      <label for="masterkey">Master Key: </label><br>
-                      <input type="password" name="masterkeyID"></input>
-                      <br>
-                      <br>
-                    <input class="btn btn-outline-primary" name="Login" type="submit" value="Login"/></input>
-                  </form>
-                  <br>
-                        <small class="text-muted">§</small>
-                    </p>
-                </div>
-            </div>
+    <div class="card-body">
+        <h4 class="card-title">Saved Password:</h4>
+        <p class="card-text">
+          <table class="table table-borderless">
+            <thead>
+              <tr>
+                <th>Website:</th>
+                <th>Key:</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>youtube.com</td>
+                <td><a class="btn btn-outline-primary" href = "https://youtube.com" name="key" type="submit" id = "clb" value="🔑"/>parik123</a></td>
+              </tr>
+              <tr>
+                <button class="btn" data-clipboard-target="#clb">
+                  <img src="img/ye.jpeg" alt="Copy to clipboard">
+                </button>
+            </tr>
 
+            </tbody>
+        </p>
+        <p class="card-text">
+            <small class="text-muted">Last updated 3 mins ago</small>
+        </p>
+    </div>
+  </div>
+  <script src="dist/clipboard.min.js">
+  new ClipboardJS('.btn');
+  </script>
 </body>
 </html>
