--- a/templates/password-display.html
+++ b/templates/password-display.html
@@ -21,7 +21,6 @@
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarcollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
-    </div>
     <div class="collapse navbar-collapse" id="navbarcollapse">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item">
@@ -35,20 +34,21 @@
           </li>
         </ul>
       </div>
+      </div>
   </nav>
   <br><br><br><br><br><br>
   <div class="card text-center col-lg-4 mx-auto">
-                <div class="card-body">
-                    <h4 class="card-title">Welcome Back To
-                      <br> Internet Security</h4>
-                    <br>
-                    <table class="table table-borderless">
+      <div class="card-body">
+        <h4 class="card-title">Welcome Back To
+          <br> Internet Security</h4>
+          <br>
+          <table class="table table-borderless">
             <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Website:</th>
-                    <th>Key:</th>
-                </tr>
+              <tr>
+                <th>#</th>
+                <th>Website:</th>
+                <th>Key:</th>
+              </tr>
             </thead>
             <tbody>
                 <tr>
@@ -64,24 +64,76 @@
 
                 </tr>
                 <tr>
-                  <th scope="row">3</th>
+                  <th scope="row">3</th><!-- ROW 3 -->
                   <td>Netflix.com</td>
 
-                   <td><a class="btn btn-outline-primary" href = "password.html" name="key" type="submit" value="🔑"/>
-                     🔑</a></td>
+                   <td>
+                     <a class="btn btn-outline-primary" href = "password.html" name="key" type="submit" value="🔑"/>
+                     🔑</a>
+                     <!-- Button trigger modal -->
+                     <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                       🔑
+                     </button>
 
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title mx-auto" id="exampleModalLongTitle">SecureSites</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+                          <div class="modal-body">
+                            <div class="card-body">
+                                <h6 class="card-text"> Saved Password: </h6>
+                                  <table class="table table-borderless">
+                                    <thead>
+                                      <tr>
+                                        <th>Website:</th>
+                                        <th>Key:</th>
+                                      </tr>
+                                    </thead>
+                                    <tbody>
+                                      <tr>
+                                        <td>youtube.com</td>
+                                        <td><a class="btn btn-outline-primary" href = "https://youtube.com" name="key" type="submit" id = "clb" value="🔑"/>parik123</a></td>
+                                      </tr>
+                                    </td>
+                                    <p>hi</p>
+                                    </tbody>
+                            </div>
+                          </div>
+                            <p>"hi"</p>
+                        </div>
+                        </div>
+                      </div>
+                      <p>hi</p>
+                    </div>
+                  </td>
                 </tr>
-            </tbody>
-        </table>
-                  <br>
-                  <a class="btn btn-outline-success" href = "password.html" name="key" type="submit" value="+"/>+</a>
-                  <a class="btn btn-outline-danger" href = "password.html" name="key" type="submit" value="-"/>-</a>
-                  <br><br>
-                        <small class="text-muted">§</small>
-                    </p>
-                </div>
-            </div>
 
+            </tbody>
+
+        </table>
+
+        </div>
+        <br>
+        <a class="btn btn-outline-success" href = "password.html" name="key" type="submit" value="+"/>+</a>
+        <a class="btn btn-outline-danger" href = "password.html" name="key" type="submit" value="-"/>-</a>
+        <br><br>
+              <small class="text-muted">§</small>
+          </p>
+
+
+      </div>
+      <br>
+      <a class="btn btn-outline-success" href = "password.html" name="key" type="submit" value="+"/>+</a>
+      <a class="btn btn-outline-danger" href = "password.html" name="key" type="submit" value="-"/>-</a>
+      <br><br>
+            <small class="text-muted">§</small>
+        </p>
 <script>
 // When the user clicks on <div>, open the popup
 function myFunction() {
@@ -89,5 +141,57 @@ function myFunction() {
   popup.classList.toggle("show");
 }
 </script>
+<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+    crossorigin="anonymous"></script>
+    <script>
+        // Get the current year for the copyright
+        $('#year').text(new Date().getFullYear());
+
+        // Init Scrollspy
+        $('body').scrollspy({ target: '#main-nav' });
+
+        // Smooth Scrolling
+        $("#main-nav a").on('click', function (event) {
+          if (this.hash !== "") {
+            event.preventDefault();
+
+            const hash = this.hash;
+
+            $('html, body').animate({
+              scrollTop: $(hash).offset().top
+            }, 800, function () {
+
+              window.location.hash = hash;
+            });
+          }
+        });
+      </script>
+      <script>
+        $('.carousel').carousel({
+          interval:3000,
+          keyboard: true, <!-- not working -->
+          pause: 'hover',
+          wrap: true,   <!--wrap option set to true works for moving images like in a round and when set to false movement stops after last pic and the only option left is to go back, same with first pic wont allow to go before first -->
+        });
+        $('#slider1').on('slide.bs.carousel', function(){
+          console.log('slide - this fires when img moves/takes off')
+        });
+
+        $('#slider1').on('slid.bs.carousel', function() {
+        console.log('slid - this fires when img stops')
+        });
+      </script>
+
+
+      <br>
+      <a class="btn btn-outline-success" href = "password.html" name="key" type="submit" value="+"/>+</a>
+      <a class="btn btn-outline-danger" href = "password.html" name="key" type="submit" value="-"/>-</a>
+      <br><br>
+            <small class="text-muted">§</small>
+        </p>
 </body>
 </html>
