--- a/templates/password.html
+++ b/templates/password.html
@@ -13,31 +13,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <nav class="navbar navbar-expand-sm navbar-light fixed-top py-40 bg-primary" id="main-nav">
-    <div class="container">
-      <a href="securesites.html" class="navbar-brand">
-        <img src="img/securesite.jpeg" alt=":)" width="50" height="50">
-      </a>
-      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarcollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
-    <div class="collapse navbar-collapse" id="navbarcollapse">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item">
-            <a href="Sign-In.html" class="nav-link">Sign In </a>
-          </li>
-          <li class="nav-item">
-            <a href="Sign-Up.html" class="nav-link"> Sign Up</a>
-          </li>
-        </li>
-        <li class="nav-item">
-          <a href="password-display.html" class="nav-link"> Password Display</a>
-        </li>
-        </ul>
-      </div>
-  </nav>
-  <br><br><br><br><br>
+  <br>
+  <div class="card-img-top img-fluid text-center mx-auto" width = "20" height = "20">
+    <a href="securesites.html" class="navbar-brand">
+      <img class = "img-fluid mx-auto" src = "img/securesitemini.jpeg">
+    </a>
+</div>
+  <br>
+  <br>
   <div class="card text-center col-lg-4 mx-auto">
     <div class="card-body">
         <h4 class="card-title">Saved Password:</h4>
@@ -55,15 +38,13 @@
                 <td><a class="btn btn-outline-primary" href = "https://youtube.com" name="key" type="submit" id = "clb" value="🔑"/>parik123</a></td>
               </tr>
               <tr>
+                <!--
                 <button class="btn" data-clipboard-target="#clb">
                   <img src="img/ye.jpeg" alt="Copy to clipboard">
-                </button>
+                </button> -->
             </tr>
 
             </tbody>
-        </p>
-        <p class="card-text">
-            <small class="text-muted">Last updated 3 mins ago</small>
         </p>
     </div>
   </div>
